--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-numpy==1.24.3
-pandas==2.0.2
-matplotlib==3.7.1
-seaborn==0.12.2
-jupyter==1.0.0
-notebook==7.0.0
-scikit-learn==1.2.2
-plotly==5.15.0
-windrose==1.9.0
+pandas>=1.3.0
+numpy>=1.20.0
+matplotlib>=3.4.0
+seaborn>=0.11.0
+scipy>=1.7.0
+plotly>=5.1.0
+jupyter>=1.0.0
+notebook>=6.4.0
+windrose>=1.8.0
