--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-pandas>=1.3.0
-numpy>=1.20.0
-matplotlib>=3.4.0
-seaborn>=0.11.0
-scipy>=1.7.0
-plotly>=5.1.0
-jupyter>=1.0.0
-notebook>=6.4.0
-windrose>=1.8.0
+pandas
+numpy
+matplotlib
+seaborn
+scipy
+jupyter
