--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,20 @@
-pandas
-numpy
-matplotlib
-seaborn
-scipy
-jupyter
+# Core dependencies
+pandas==2.1.4
+numpy==1.26.2
+streamlit==1.29.0
+plotly==5.18.0
+seaborn==0.13.0
+matplotlib==3.8.2
+
+# Testing
+pytest==7.4.3
+pytest-cov==4.1.0
+
+# Code quality
+flake8==7.0.0
+black==24.1.1
+isort==5.13.2
+
+# Development
+jupyter==1.0.0
+ipykernel==6.29.0
